Corrette segnalazioni sonar.